--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,15 +6,16 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  auto_route: ^7.8.3
+  auto_route: ^9.2.2
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  url_strategy: ^0.3.0
 
 dev_dependencies:
-  auto_route_generator: ^7.3.1
+  auto_route_generator: ^9.0.0
   build_runner: ^2.4.6
-  flutter_lints: ^2.0.3
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
